--- a/.buildkite/_forge.rayci.yml
+++ b/.buildkite/_forge.rayci.yml
@@ -3,8 +3,15 @@ steps:
   - name: forge
     wanda: ci/docker/forge.wanda.yaml
 
+  # Images for building executable and docker images
+
   - name: manylinux
     wanda: ci/docker/manylinux.wanda.yaml
+
+  - name: raypy38cu118base
+    wanda: ci/docker/ray.py38.cu118.base.wanda.yaml
+
+  # Image for running tests
   
   - name: oss-ci-base_test
     wanda: ci/docker/base.test.wanda.yaml
