--- a/ci/ray_ci/BUILD.bazel
+++ b/ci/ray_ci/BUILD.bazel
@@ -89,6 +89,20 @@ py_test(
 )
 
 py_test(
+    name = "test_docker_container",
+    size = "small",
+    srcs = ["tests/test_docker_container.py"],
+    tags = [
+        "ci_unit",
+        "team:ci",
+    ],
+    deps = [
+        ":ray_ci_lib",
+        ci_require("pytest"),
+    ],
+)
+
+py_test(
     name = "test_bazel_sharding",
     size = "small",
     srcs = ["tests/test_bazel_sharding.py"],
