build ml ray image
Signed-off-by: can <can@anyscale.com>

--- a/.buildkite/build.rayci.yml
+++ b/.buildkite/build.rayci.yml
@@ -24,10 +24,20 @@ steps:
     depends_on: manylinux
     job_env: manylinux
 
-  - label: ":tapioca: build: docker"
+  - label: ":tapioca: build: ray cu118 docker"
     instance_type: medium
     commands:
-      - bazel run //ci/ray_ci:build -- docker --python-version py38
+      - bazel run //ci/ray_ci:build -- docker --python-version py38 --platform cu118
+    depends_on: 
+      - manylinux
+      - forge
+      - raypy38cu118base
+    job_env: forge
+
+  - label: ":tapioca: build: ray gpu docker"
+    instance_type: medium
+    commands:
+      - bazel run //ci/ray_ci:build -- docker --python-version py38 --platform gpu
     depends_on: 
       - manylinux
       - forge
